# HttpWebServer

./: .gitignore  AddrInfoWrapper.hpp  AsyncIO.hpp  CMakeLists.txt  Connection.hpp  ConnectionManager.cpp  ConnectionManager.hpp  HttpParser.hpp  HttpServer.hpp  README.md  Task.hpp  main.cpp  server.conf
src/: main.cpp
src/core/: Config.hpp  Connection.hpp  ConnectionManager.cpp  ConnectionManager.hpp  Logger.hpp
src/http/: FileService.hpp  HttpParser.hpp  HttpServer.hpp  RequestParser.hpp
src/network/: AsyncIO.hpp  NetworkException.hpp  NetworkOperation.hpp  SocketAddressStorage.hpp  SocketWrapper.hpp
src/utils/: PerformanceMonitor.hpp
www/: index.html
